[package]
name = "nebula-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"

bevy_ascii_terminal = { git = "https://github.com/msklosak/bevy_ascii_terminal.git", branch = "bevy_0.13" }

bevy-inspector-egui = "0.23.3"
bevy_egui = "0.25.0"
rand = "0.8.5"
rand_chacha = "0.3.1"

[patch.crates-io]
sark_grids = { git = "https://github.com/msklosak/sark_grids_rs.git", branch = "update_dependencies" }
bevy_tiled_camera = { git = "https://github.com/msklosak/bevy_tiled_camera.git", branch = "bevy_0.13", version = "0.9.0" }
